# yourdfpy

./: .gitignore  pyproject.toml
src/yourdfpy/: __init__.py  urdf.py  viz.py
