[project]
name = "yourdfpy"
version = "0.0.99"
description = "A simpler and easier-to-use library for loading, manipulating, saving, and visualizing URDF files."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [{ name = "Clemens Eppner", email = "clemens.eppner@gmail.com" }]
requires-python = ">=3.7"


dependencies = [
  "lxml",
  "trimesh[easy]>=3.11.2",
  "numpy>2.0",
  "six",
]

[project.urls]
Homepage = "https://github.com/tenhjo/yourdfpy/"
Source = "https://github.com/tenhjo/yourdfpy/"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
yourdfpy = { path = ".", editable = true }

[tool.pixi.dependencies]
pixi-pycharm = ">=0.0.10,<0.0.11"
hatchling = ">=1.27.0,<2"
